--- a/bodrum-dapp/package.json
+++ b/bodrum-dapp/package.json
@@ -8,7 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@walletconnect/web3-provider": "^1.0.8",
+    "@walletconnect/web3-provider": "1.7.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
